# InippModule

./: .gitignore  CMakeLists.txt  LICENSE  cat_checklist.inipp  main.cpp
catmods/: cat_register.inipp
inc/: defs.hpp
